fixed navbar color on signup/in, center aligned form and changed text for submit button in forgot password

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -231,3 +231,12 @@ div#flash.thredded--flash-message.thredded--flash-message--notice {
   padding-left: 20px;
   padding-right: 20px;
 }
+
+nav#mainNav {
+  background-color: #ee592b;
+}
+
+
+form#new_user {
+  text-align: center;
+}
